# sturdy-octo-funicular

./: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  main.py
app/api/: routes.py
app/config/: __init__.py  settings.py
app/datastore/: __init__.py  influxdb_client.py
app/models/: weather.py
app/service/: __init__.py  weather_service.py
tests/api/: test_api_contract.py
tests/model/: test_weather_model.py
tests/service/: test_weather_service.py
